@@ -53,6 +53,11 @@ Revision history for Perl extension Module::Build.
    should no longer find their way into the blib/ directory (and from
    there into installation directories).
 
+ - Worked around an unpleasant interaction between version.pm and the
+   version-checking code that makes sure Module::Build's version
+   hasn't changed during the lifetime of the 'Build' script. [Reported
+   by Trevor Schellhorn]
+
  - Fixed a problem in htmlify_pods() that would produce test failures
    on Cygwin (and probably elsewhere).  [Yitzchak Scott-Thoennes]
 
